# computational-genomics-playground

./: .gitignore  LICENSE  README.md
computational-genomics-playground/: README.md  main.nf  main.py  nextflow.config  pyproject.toml
computational-genomics-playground/containers/: Dockerfile.gcta
computational-genomics-playground/nf/modules/: BUILD_COVAR.nf  GCTA_SIM.nf  GWAS_PLINK.nf  MAKE_PY_ENV.nf  PCA_PLINK.nf  PLINKIFY.nf  QC_HET.nf  QC_HETDIF_FILT.nf  QC_PLINK.nf
